# pkg-haskell-tools

./: dht  dht.cabal
debian/: changelog  control  copyright  docs  manpages  pkg-haskell-tools.doc-base  pkg-haskell-tools.install  rules
lib/: DHT.pm
scripts/: cabal-debian  dch  debian2dsc  init  make-all  mass-change  tag  upgrade  upload  what-to-build  what-to-upgrade  what-to-upload
src/: Link.hs  Utils.hs  make-all.hs
src/Development/Shake/: Fancy.hs
