name:                dht
version:             0.1
synopsis:            Debian Haskell Tools
description:
  A set of tools, implemented in Haskell, and used by the Debian Haskell Team.
license:             MIT
-- license-file:        LICENSE
author:              Joachim Breitner
maintainer:          nomeata@debian.org
copyright:           2015 Joachim Breitner
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable make-all
  main-is:        make-all.hs
  other-modules:
    Utils
    Development.Shake.Fancy
  build-depends:
    base >= 4.6,
    containers,
    directory,
    transformers,
    filepath,
    time,
    unix,
    parsec,
    text,
    shake >= 0.16,
    extra >= 1.1,
    debian >= 3.89,
    optparse-applicative >= 0.16,
    split == 0.2.*,
    concurrent-output >= 1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
